--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,3 @@
-baseURL = 'https://ekalb81.github.io/ivy_design'
+baseURL = 'https://ivy-alane-design.netlify.app'
 languageCode = 'en-us'
 title = 'My New Hugo Sitess'
